--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,9 @@ builds:
     goarch:
       - amd64
       - arm64
+    ignore:
+      - goos: linix
+        goarch: arm64
 archives:
   - replacements:
       darwin: Darwin
