--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,7 +19,7 @@ builds:
       - amd64
       - arm64
     ignore:
-      - goos: linix
+      - goos: linux
         goarch: arm64
 archives:
   - replacements:
